--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@react-three/drei": "^9.114.0",
+    "@react-three/fiber": "^8.17.8",
     "clsx": "^2.1.1",
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "sonner": "^1.5.0",
+    "three": "^0.169.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
